# face-rec-system-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: face_tool.py  migrate_employees.py
src/: main.rs
src/api/: handlers.rs
src/core/: engine.rs  mod.rs  service.rs  types.rs
src/store/: mod.rs  qdrant.rs
